# radar-vagas-discord

./: .env.example  .gitattributes  .gitignore  AGENTS.md  GUIA_CODEX_RADAR_VAGAS_DISCORD.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  radar.yml
Context/: CONTEXTO_RADAR_VAGAS_DISCORD.md
config/: candidate_profile.example.yaml  profile.yaml
data/: seen_jobs.backup.json  seen_jobs.json
docs/: architecture.md  execution.md  operations.md  roadmap.md  security.md
src/radar_vagas/: __init__.py  __main__.py  cli.py  config.py  deduplication.py  models.py  pipeline.py  scoring.py  storage.py  text_utils.py
src/radar_vagas/notifications/: __init__.py  discord.py
src/radar_vagas/providers/: __init__.py  base.py  jooble.py  remotive.py
src/radar_vagas/resumes/: __init__.py  content_selector.py  file_names.py  generator.py  keyword_extractor.py  profile.py  validator.py
tests/: test_cli.py  test_config.py  test_deduplication.py  test_discord_notifications.py  test_jooble_provider.py  test_models.py  test_pipeline.py  test_remotive_provider.py  test_resumes.py  test_scoring.py  test_smoke.py  test_storage.py  test_workflows.py
tests/fixtures/: candidate_profile.yaml
tests/fixtures/jobs/: bi_job.json  data_engineering_job.json  finance_job.json
