[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-vagas-discord"
version = "0.1.0"
description = "Radar pessoal de vagas com scoring deterministico e notificacoes no Discord."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Renan Dobriansky da Silva" },
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "PyYAML>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "tenacity>=8.3,<10.0",
  "python-dateutil>=2.9,<3.0",
  "python-docx>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<8.0",
  "respx>=0.21,<1.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
radar-vagas = "radar_vagas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

